[package]
name = "box"
version = "0.1.0"
authors = ["Mike Seddon"]
edition = "2018"

[features]
default = ["vendored-zmq"]
simd = ["datafusion/simd"]
snmalloc = ["snmalloc-rs"]
vendored-zmq = ["zmq/vendored"]

[dependencies]
async-trait = "0.1.41"
datafusion = "6"
futures = "0.3"
lazy_static = "1.4"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snmalloc-rs = {version = "0.2", optional = true, features= ["cache-friendly"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
num_cpus = "1.0"
zmq = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = [ "v4" ] }
hmac = "0.10"
sha2 = "0.9"
hex = "0.4"
dirs = "3"
chrono = "0.4"
unicode-segmentation = "1.7"
json = "0.12"