[package]
name = "box"
version = "0.1.0"
authors = ["Mike Seddon"]
edition = "2021"

[features]
default = ["vendored-zmq", "simd", "snmalloc", "datafusion-objectstore-s3"]
simd = ["datafusion/simd"]
snmalloc = ["snmalloc-rs"]
vendored-zmq = ["zmq/vendored"]

[dependencies]
async-trait = "0.1.41"
chrono = "0.4"
datafusion = "6.0.0"
datafusion-objectstore-s3 = { git = "https://github.com/datafusion-contrib/datafusion-objectstore-s3", optional = true, rev = "366bb6cf51518bc1e3f71ba73f0aff13d6415711" }
dirs = "4.0.0"
futures = "0.3.19"
generic-array = "0.14.5"
hex = "0.4"
hmac = "0.12.0"
http = "0.2.6"
json = "0.12"
lazy_static = "1.4.0"
num_cpus = "1.0"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.1"
snmalloc-rs = {version = "0.2", optional = true, features= ["cache-friendly"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
unicode-segmentation = "1.7"
uuid = { version = "0.8", features = [ "v4" ] }
zmq = { version = "0.9", default-features = false }